--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             
             <div class="menu">
 
-                <ul>
+<!--                 <ul>
                     <li>
                         <a href="#">Home</a>
                     </li>
@@ -46,7 +46,7 @@
                     <li>
                         <a href="#"> Blog</a>
                     </li>
-                </ul>
+                </ul> -->
             </div>
   
             <div class="main-body">
@@ -61,7 +61,7 @@
 
         <!-- Project Section -->
         <section class="project">
-            <a href="/50-projects"><h2>Visit Projects</h2></a>
+            <a href="/50-projects" style="text-decoration:none"><h2>Visit Projects</h2></a>
             <div></div>
             <div></div>
             <div></div>
