--- a/myfolio/index.html
+++ b/myfolio/index.html
@@ -12,7 +12,7 @@
     <!-- ====================CSS==================== -->
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <title>PortFolio 1</title>
+    <title>Myfolio</title>
 </head>
 
 <body>
@@ -20,12 +20,13 @@
     <!-- ===================Header===================== -->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="" class="nav_logo">Faysel</a>
+            <a href="" class="nav_logo">Faysel.</a>
 
             <div class="nav_menu" id="nav-menu">
+
                 <ul class="nav_list grid">
                     <li class="nav_item">
-                        <a href="#home" class="nav_link">
+                        <a href="#home" class="nav_link active-link">
                             <i class="uil uil-estate nav_icon"></i> Home
                         </a>
                     </li>
@@ -56,9 +57,12 @@
                     </li>
                 </ul>
                 <i class="uil uil-times nav_close" id="nav-close"></i>
+
             </div>
 
             <div class="nav_btns">
+                <!-- Theme Change button : Dark/Light Mode -->
+                <i class="uil uil-moon change-theme" id="theme-button"></i>
                 <div class="nav_toggle" id="nav-toggle">
                     <i class="uil uil-apps"></i>
                 </div>
@@ -107,7 +111,7 @@
                     <div class="home_data">
                         <h1 class="home_title">Hi, I'm Rajo</h1>
                         <h3 class="home_subtitle">Student Developer</h3>
-                        <p class="home_description">Lorem ipsum dolor sit amet consectetur.</p>
+                        <p class="home_description">I am an enthusiast computer science student, programmer, web developer, ui/ux designer, photographer, mentor and so on. Welcome to my website</p>
                         <a href="#contact" class="button button-flex">
                             Contact Me<i class="uil uil-message button_icon"></i>
                         </a>
@@ -124,6 +128,7 @@
                 </div>
             </div>
         </section>
+
         <!-- =================== ABOUT ===================== -->
 
         <section class="about section" id="about">
@@ -132,21 +137,22 @@
             <div class="about_container container grid">
                 <img src="assets/images/img_1.png" alt="" class="about_img">
                 <div class="about_data">
-                    <p class="about_description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus, repudiandae quo atque eius officiis quae natus laudantium omnis perspiciatis
+                    <p class="about_description">A young person who just started exploring the world. My life in this world started back in 2000. Life was going all well until I started losing my beloved people including my Mom, Grandma and so many more. I had been through real tough times. No one got my back. One day I decided to stand strong and fight it back. I have several goals to make happen. I am working hard on this. All that happened with me made me stronger and my heart hard.
                     </p>
+                    <p class="about_description">However, there is still room for kindness. I show my helping hand whoever deserves it. I am grateful to this world. I am grateful to my Mom. All credits for my great or good deeds belong to my Mom (May Allah grant her Jannah) & pray for her. Talking about professional & formal journey. I have the following lifespan over the years.</p>
 
                     <div class="about_info">
                         <div>
-                            <span class="about_info-title">05+</span>
-                            <span class="about_info-name">Years <br>experience</span>
+                            <span class="about_info-title">16+</span>
+                            <span class="about_info-name">Years <br>Learning</span>
                         </div>
                         <div>
-                            <span class="about_info-title">07</span>
-                            <span class="about_info-name">Projects <br>completed</span>
+                            <span class="about_info-title">03+</span>
+                            <span class="about_info-name">Years <br>Professional life</span>
                         </div>
                         <div>
                             <span class="about_info-title">05+</span>
-                            <span class="about_info-name">Companies <br>worked</span>
+                            <span class="about_info-name">Years <br>Mentorship</span>
                         </div>
                     </div>
 
@@ -158,6 +164,7 @@
                 </div>
             </div>
         </section>
+
         <!-- ================== SKILLS ===================== -->
         <section class="section skills" id="skills">
             <h2 class="section_title">Skills</h2>
@@ -230,7 +237,7 @@
                             <div class="skills_data">
                                 <div class="skills_titles">
                                     <h3 class="skills_name">Django</h3>
-                                    <span class="skills_numer">5%</span>
+                                    <span class="skills_numer">25%</span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage skills_django"></span>
@@ -239,7 +246,7 @@
                             <div class="skills_data">
                                 <div class="skills_titles">
                                     <h3 class="skills_name">MongoDB</h3>
-                                    <span class="skills_numer">0%</span>
+                                    <span class="skills_numer">2%</span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage skills_mongo"></span>
@@ -256,11 +263,11 @@
                             </div>
                             <div class="skills_data">
                                 <div class="skills_titles">
-                                    <h3 class="skills_name">React</h3>
-                                    <span class="skills_numer">70%</span>
+                                    <h3 class="skills_name">SQL</h3>
+                                    <span class="skills_numer">2%</span>
                                 </div>
                                 <div class="skills_bar">
-                                    <span class="skills_percentage skills_react"></span>
+                                    <span class="skills_percentage skills_sql"></span>
                                 </div>
                             </div>
                         </div>
@@ -350,7 +357,7 @@
                             <div class="skills_data">
                                 <div class="skills_titles">
                                     <h3 class="skills_name">Event Photography</h3>
-                                    <span class="skills_numer">90%</span>
+                                    <span class="skills_numer">87%</span>
                                 </div>
                                 <div class="skills_bar">
                                     <span class="skills_percentage skills_event"></span>
@@ -532,15 +539,215 @@
 
             </div>
         </section>
+
         <!-- ================== Services =================== -->
+        <section class="services section" id="services">
+            <h2 class="section_title">Services</h2>
+            <span class="section_subtitle">What I do</span>
+
+            <div class="services_container container grid">
+                <!-- ===============Service 1============= -->
+                <div class="services_content">
+                    <div>
+                        <i class="uil uil-web-grid services_icon"></i>
+                        <h3 class="services_title">UI/UX<br> Design</h3>
+                    </div>
+                    <span class="button button-flex button-small button-link services_button">
+                        View more <i class="uil uil-arrow-right button_icon"></i>
+                    </span>
+
+                    <div class="services_modal">
+                        <div class="services_modal-content">
+                            <h4 class="services_modal-title">Modern UI/UX <br> Design</h4>
+                            <i class="uil uil-times services_modal-close"></i>
+
+                            <ul class="services_modal-services grid">
+                                <li class="services_modal-service">
+                                    <i class="uil uil-check-circle servicec_modal-icon"></i>
+                                    <p>I design user interface</p>
+                                </li>
+                                <li class="services_modal-service">
+                                    <i class="uil uil-check-circle servicec_modal-icon"></i>
+                                    <p>Web page design</p>
+                                </li>
+                                <li class="services_modal-service">
+                                    <i class="uil uil-check-circle servicec_modal-icon"></i>
+                                    <p>Illustration & vector art</p>
+                                </li>
+                                <li class="services_modal-service">
+                                    <i class="uil uil-check-circle servicec_modal-icon"></i>
+                                    <p>Graphical Content design</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- ===============Service 2============= -->
+                <div class="services_content">
+                    <div>
+                        <i class="uil uil-arrow services_icon"></i>
+                        <h3 class="services_title">Frontend<br> Development</h3>
+                    </div>
+                    <span class="button button-flex button-small button-link services_button">
+                        View more <i class="uil uil-arrow-right button_icon"></i>
+                    </span>
+
+                    <div class="services_modal">
+                        <div class="services_modal-content">
+                            <h4 class="services_modal-title">Frontend<br>Development</h4>
+                            <i class="uil uil-times services_modal-close"></i>
+
+                            <ul class="services_modal-services grid">
+                                <li class="services_modal-service">
+                                    <i class="uil uil-check-circle servicec_modal-icon"></i>
+                                    <p>Frontend Design</p>
+                                </li>
+                                <li class="services_modal-service">
+                                    <i class="uil uil-check-circle servicec_modal-icon"></i>
+                                    <p>Frontend development (MERN)</p>
+                                </li>
+                                <li class="services_modal-service">
+                                    <i class="uil uil-check-circle servicec_modal-icon"></i>
+                                    <p>Portfolio, E-commerce, Agency etc</p>
+                                </li>
+                                <li class="services_modal-service">
+                                    <i class="uil uil-check-circle servicec_modal-icon"></i>
+                                    <p>On your budget</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- ===============Service 3============= -->
+                <div class="services_content">
+                    <div>
+                        <i class="uil uil-camera services_icon"></i>
+                        <h3 class="services_title">Photography</h3>
+                    </div>
+                    <span class="button button-flex button-small button-link services_button">
+                        View more <i class="uil uil-arrow-right button_icon"></i>
+                    </span>
+
+                    <div class="services_modal">
+                        <div class="services_modal-content">
+                            <h4 class="services_modal-title">Photography &<br> Filmmaking</h4>
+                            <i class="uil uil-times services_modal-close"></i>
+
+                            <ul class="services_modal-services grid">
+                                <li class="services_modal-service">
+                                    <i class="uil uil-check-circle servicec_modal-icon"></i>
+                                    <p>Portrait Photography</p>
+                                </li>
+                                <li class="services_modal-service">
+                                    <i class="uil uil-check-circle servicec_modal-icon"></i>
+                                    <p>Event Photography</p>
+                                </li>
+                                <li class="services_modal-service">
+                                    <i class="uil uil-check-circle servicec_modal-icon"></i>
+                                    <p>Wedding Photography</p>
+                                </li>
+                                <li class="services_modal-service">
+                                    <i class="uil uil-check-circle servicec_modal-icon"></i>
+                                    <p>Cinematography</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!-- ===============Service 4============= -->
+                <div class="services_content">
+                    <div>
+                        <i class="uil uil-book services_icon"></i>
+                        <h3 class="services_title">Teaching</h3>
+                    </div>
+                    <span class="button button-flex button-small button-link services_button">
+                        View more <i class="uil uil-arrow-right button_icon"></i>
+                    </span>
+
+                    <div class="services_modal">
+                        <div class="services_modal-content">
+                            <h4 class="services_modal-title">Teaching &<br> Mentorship</h4>
+                            <i class="uil uil-times services_modal-close"></i>
+
+                            <ul class="services_modal-services grid">
+                                <li class="services_modal-service">
+                                    <i class="uil uil-check-circle servicec_modal-icon"></i>
+                                    <p>Physics, Chemistry, Biology</p>
+                                </li>
+                                <li class="services_modal-service">
+                                    <i class="uil uil-check-circle servicec_modal-icon"></i>
+                                    <p>Math,(ICT) & Programming as well</p>
+                                </li>
+                                <li class="services_modal-service">
+                                    <i class="uil uil-check-circle servicec_modal-icon"></i>
+                                    <p>Train soft-skills i.e Web Dev</p>
+                                </li>
+                                <li class="services_modal-service">
+                                    <i class="uil uil-check-circle servicec_modal-icon"></i>
+                                    <p>Academic & mental counselling</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
         <!-- ================= PORTFOLIO =================== -->
 
     </main>
 
     <!-- ===================FOOTER===================== -->    
+    <footer class="footer">
+        <div class="footer_bg">
+            <div class="footer_container container grid">
+                <div>
+                    <h1 class="footer_title">Faysel</h1>
+                    <span class="footer_subtitle">Versatile | Student Dev</span>
+                </div>
+
+                <ul class="footer_links">
+                    <li>
+                        <a href="#home" class="footer_link">Home</a>
+                    </li>
+                    <li>
+                        <a href="#about" class="footer_link">About</a>
+                    </li>
+                    <li>
+                        <a href="#services" class="footer_link">services</a>
+                    </li>
+                </ul>
+
+                <div class="footer_socials">
+                    <a href="https://facebook.com/syedfaysel" target="_blank"  class="footer_social">
+                        <i class="uil uil-facebook-f"></i>
+                    </a>
+
+                    <a href="https://instagram.com/rajo_28" target="_blank" class="footer_social">
+                        <i class="uil uil-instagram"></i>
+                    </a>
+
+                    <a href="https://twitter.com/syedfaysel" target="_blank" class="footer_social">
+                        <i class="uil uil-twitter-alt"></i>
+                    </a>
+
+                    <a href="https://codeforces.com/profile/syedrajo20" target="_blank" class="footer_social">
+                        <i class="uil uil-code-branch"></i>
+                    </a>
+                </div>
+            </div>
+
+            <p class="footer_copy">&copy; Syed Faysel R. | All Rights Reserved</p>
+        </div>
+    </footer>
 
     <!-- ===================SCROLL TOP================= -->
-
+    <a href="#" class="scroll_up" id="scroll-up">
+        <i class="uil uil-arrow-up scroll_up-icon"></i>
+    </a>
     <!-- ===================SWIPER JS================== -->
 
     <!-- ===================Main JS==================== -->
