myfolio portfolio section start

--- a/myfolio/index.html
+++ b/myfolio/index.html
@@ -698,6 +698,36 @@
 
         <!-- ================= PORTFOLIO =================== -->
 
+        <section class="section portfolio" id="portfolio">
+            <h2 class="section_title">Portfolio</h2>
+            <span class="section_subtitle">Some of my works</span>
+
+            <div class="portfolio_container container">
+                <div>
+                     <!-- ----------- PORTFOLIO Item 1 --------------->
+                     <div class="portfolio_content grid">
+                        <img src="./assets/images/portfolio1.jpg" alt="" class="portfolio_img">
+
+                        <div class="portfolio_data">
+                            <h3 class="portfolio_title">Modern responsive Website</h3>
+                            <p class="portfolio_description">
+                                Lorem ipsum dolor sit amet consectetur adipisicing.
+                            </p>
+
+                            <a href="" class="button button-flex button-small portfolio_button">
+                                
+                            </a>
+                        </div>
+                     </div>
+                     <!-- ----------- PORTFOLIO Item 2 --------------->
+                     <!-- ----------- PORTFOLIO Item 3 --------------->
+                     <!-- ----------- PORTFOLIO Item 4 --------------->
+                     <!-- ----------- PORTFOLIO Item 5 --------------->
+
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <!-- ===================FOOTER===================== -->    
