myfolio portfolio section html

--- a/myfolio/index.html
+++ b/myfolio/index.html
@@ -715,12 +715,40 @@
                             </p>
 
                             <a href="" class="button button-flex button-small portfolio_button">
-                                
+                                Demo<i class="uil uil-arrow-right button_icon"></i>
                             </a>
                         </div>
                      </div>
                      <!-- ----------- PORTFOLIO Item 2 --------------->
+                     <div class="portfolio_content grid">
+                        <img src="./assets/images/portfolio2.jpg" alt="" class="portfolio_img">
+
+                        <div class="portfolio_data">
+                            <h3 class="portfolio_title">Modern responsive Website</h3>
+                            <p class="portfolio_description">
+                                Lorem ipsum dolor sit amet consectetur adipisicing.
+                            </p>
+
+                            <a href="" class="button button-flex button-small portfolio_button">
+                                Demo<i class="uil uil-arrow-right button_icon"></i>
+                            </a>
+                        </div>
+                     </div>
                      <!-- ----------- PORTFOLIO Item 3 --------------->
+                     <div class="portfolio_content grid">
+                        <img src="./assets/images/portfolio3.jpg" alt="" class="portfolio_img">
+
+                        <div class="portfolio_data">
+                            <h3 class="portfolio_title">Photography</h3>
+                            <p class="portfolio_description">
+                                Lorem ipsum dolor sit amet consectetur adipisicing.
+                            </p>
+
+                            <a href="" class="button button-flex button-small portfolio_button">
+                                Demo<i class="uil uil-arrow-right button_icon"></i>
+                            </a>
+                        </div>
+                     </div>
                      <!-- ----------- PORTFOLIO Item 4 --------------->
                      <!-- ----------- PORTFOLIO Item 5 --------------->
 
