myfolio asset update

--- a/myfolio/index.html
+++ b/myfolio/index.html
@@ -8,7 +8,7 @@
     <!-- ===================UNICONS==================== -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <!-- ==================SWIPER CSS================== -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <!-- ====================CSS==================== -->
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -807,8 +807,8 @@
         <i class="uil uil-arrow-up scroll_up-icon"></i>
     </a>
     <!-- ===================SWIPER JS================== -->
-
+    <script src="./assets/js/swiper-bundle.min.js"></script>
     <!-- ===================Main JS==================== -->
-    <script src="assets/js/main.js"></script>
+    <script src="./assets/js/main.js"></script>
 </body>
 </html>
