opencourseware link added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <li><a class="active" href="#"><i class="fas fa-home"></i></a></li>
             <li><a href="#about">About</a></li>
             <li><a href="/50-projects">Projects</a></li>
+            <li><a href="/OpenCourseWare" target="_blank">Opencourseware</a></li>
             <li><a href="mailto:sfa.rajo20@gmail.com">Contact</a></li>
             <li><a href="https://facebook.com/syedfaysel" target="_blank">Facebook</a></li>
             <li><a href="https://blog.syedfaysel.me" target="_blank">Blog  <i class="fab fa-blogger"></i></a></li>
